# sysPAS

./: .gitignore  LICENSE  README.md  SPLCopilot_Transformed_Architecture.md  SPLUNK_HACKATHON.md  analysis.md  architecture_diagram.md  implementation_mcp_audit.md  ping_gemini.py  pyproject.toml  queries.md  query_db.py  smoke_test_gemini.py  test_spl_generation.py  walkthrough.md
app/: __init__.py
app/actions/: base.py  email.py  engine.py  models.py  ticket.py  webhook.py
app/agent/: __init__.py  compiler.py  governance.py  graph.py  index_resolver.py  investigation_agent.py  mitre_mapper.py  summary.py  threat_classifier.py
app/api/: __init__.py  (+2 more)
tests/: conftest.py  test_action_audit.py  test_action_engine.py  test_action_idempotency.py  test_action_tenant_isolation.py  test_agent_compiler.py  test_api.py  test_api_keys.py  test_api_schemas.py  test_audit_logging.py  test_auth.py  test_auth_middleware.py  test_branch_evaluation.py  test_bundle.py  test_bundle_store.py  test_collaboration_approvals.py  test_compilation_store.py  test_compiler.py  test_compliance_reports.py  test_confidence.py  test_connector_secret_injection.py  test_connectors_marketplace.py  test_context.py  test_deployment_promotions.py  test_execution_api.py  test_execution_cancel.py  test_execution_results_api.py  test_execution_resume.py  test_execution_state.py  test_exporter.py  test_field_intel.py  test_generation_engine.py  test_governance.py  test_governance_runtime.py  test_graph.py  test_grounding.py  test_investigation.py  test_job_api.py  test_job_audit.py  test_job_queue.py  (+61 more)
(+124 files in other folders)
